Add JavaScript externo

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>OPERAÇÃO</h1>
     <p>
         <label for="numero1">Número1</label>
-        <input type="text" placeholder="Digite o número 1" id="num1">
+        <input type="text" placeholder="Digite o número 1" id="num1"/>
     </p>
     <p>
         <label for="numero2">Número2</label>
@@ -19,6 +19,9 @@
     </p>
     <input type="submit" value="Calcular" id="calc" onclick="Calcular()">
 
-    
+    <p id="resultado"></p>
+
+    <!--JAVA SCRIPT EXTERNO-->
+    <script src="script.js"></script>
 </body>
 </html>
