Add um h1 mostre o resultado

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <input type="text" placeholder="Digite o número 2" id="num2">
     </p>
     <input type="submit" value="Calcular" id="calc" onclick="Calcular()">
+    <h1>MOSTRE O RESULTADO</h1>
 
     <p id="resultado"></p>
 
